# mcp-chatbot

./: .gitignore  Dockerfile  app.py  metadata.db-shm  metadata.db-wal  pyproject.toml  requirements.txt  server.py  servers_config.json
client/: mcp_tool.py  session.py
config/: configuration.py
helpers/: generator.py
llm/: oai.py  ollama.py
mcp_client/chat/: session.py
mcp_client/config/: configuration.py
mcp_client/llm/: __init__.py  oai.py  ollama.py
mcp_client/mcp/: client.py  mcp_tool.py
mcp_client/utils/: workflow.py
mcp_servers/: server.py  servers_config.json
mcp_servers/connection/: database.py
mcp_servers/utils/: helpers.py
ml_model/: loesche_quantity_month_v1.pkl  loesche_quantity_month_v2.pkl  loesche_quantity_month_v3.pkl  loesche_quantity_month_v4.pkl  loesche_quantity_month_v6.pkl  loesche_quantity_month_v7.pkl  suzuki_sales_month_v1.pkl  suzuki_sparepart_month_v1.pkl
utils/: llm.py  query.py  workflow.py
