[project]
name = "mcp-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.25",
    "langchain-experimental>=0.3.4",
    "matplotlib>=3.10.3",
    "psycopg2-binary>=2.9.10",
    "xlsxwriter>=3.2.3",
]
