[project]
name = "mcp-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.25",
    "langchain-experimental>=0.3.4",
    "llvmlite>=0.44.0",
    "matplotlib==3.7.5",
    "numba>=0.61.2",
    "pandas==2.1.4",
    "psycopg2-binary>=2.9.10",
    "pycaret==3.3.2",
    "scikit-learn==1.4.2",
    "xlsxwriter>=3.2.3",
]
